[package]
name = "fantazia_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "from",
    "into",
    "not",
    "sum",
] }
anyhow = "1.0.100"
itertools = "0.14.0"
malachite-base = "0.7.1"
num_enum = "0.7.5"
phf = { version = "0.13.1", features = ["macros", "uncased"] }
uncased = "0.9.10"
rkyv = { version = "0.8.12", optional = true }
quote = { version = "1.0.42", optional = true }
proc-macro2 = { version = "1.0.103", optional = true }
syn = { version = "2.0.110", features = [
    "full",
    "extra-traits",
], optional = true }

[features]
rkyv = ["dep:rkyv"]
proc-macro-support = ["dep:quote", "dep:proc-macro2", "dep:syn"]
