[package]
name = "fantazia_proc-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.100"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full", "extra-traits"] }
fantazia_lib = { path = "../fantazia_lib", features = ["proc-macro-support"] }
paste = "1.0.15"
